# tech-trips-data-pipeline

./: .gitignore  README.md  pyproject.toml
apps/landing_phase/: __main__.py  main_gcp.py
apps/landing_phase/landing_phase/constants/: columns.py  environment.py  storage.py
apps/landing_phase/landing_phase/domain/entities/: input_data_file.py  output_data_file.py
apps/landing_phase/landing_phase/domain/ports/: input_storage_port.py  output_storage_port.py
apps/landing_phase/landing_phase/infrastructure/api/: gcp_notifications.py
apps/landing_phase/landing_phase/infrastructure/storage/: input_storage.py  output_storage.py
apps/landing_phase/landing_phase/use_cases/: transform_use_case.py
apps/mean_trips/: main.py  main_gcp.py
apps/mean_trips/mean_trips/constants/: columns.py  environment.py
apps/mean_trips/mean_trips/domain/models/: trip_weely_metric.py
apps/mean_trips/mean_trips/domain/ports/: trip_weekly_metric_repository.py
apps/mean_trips/mean_trips/infrastructure/repositories/: trips_weekly_metric_sql_repository.py
apps/mean_trips/mean_trips/use_cases/: trips_weekly_metric_use_case.py
apps/transformation_phase/: __main__.py  main_gcp.py
apps/transformation_phase/transformation_phase/constants/: columns.py  domain.py  environment.py  storage.py
apps/transformation_phase/transformation_phase/domain/entities/: log_data.py  (+2 more)
apps/transformation_phase/transformation_phase/use_cases/: clasify_use_case.py  transform_use_case.py
apps/transformation_phase/transformation_phase/utils/: distance.py  path.py
exploration/: movement-paterns.ipynb
(+13 files in other folders)
