[tool.poetry]
name = "movement-patterns"
version = "0.1.0"
description = "Data pipeline to classify movement patterns"
authors = ["FarDust <gnfaundez@uc.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.44"
pulumi-gcp = "^6.43.0"
ipykernel = "^6.18.1"
pandas = "^1.5.2"
functions-framework = "^3.2.1"
google-api-python-client = "^2.66.0"
fsspec = "^2022.11.0"
pyarrow = "^10.0.1"
gcsfs = "^2022.11.0"
scikit-learn = "^1.1.3"
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
google-cloud-pubsub = "^2.13.11"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
